--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,23 +1,17 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  home_page:
+    header:
+      company_name: 'Khang Hai Lawfirm'
+      working_hour: 'Mon - Sat: 7:00 - 17:00'
+      email: 'lskhanghai@gmail.com'
+      address: '1/4D Ba Trieu, Hoc Mon, TP. HCM'
+      hotline: '0908362606'
+      hotline_subtitle: 'Hotline'
+      office_phone_number: '0837100638'
+      office_phone_number_subtitle: 'HCM Office'
+      free_consultant: 'GET A FREE CONSULTATION'
+      home: 'Home'
+      service: 'Service'
+      about_us: 'About us'
+      news: 'News'
+      contact_us: 'Contact us'
