--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -309,7 +309,9 @@ vi:
       office_phone_number_subtitle: 'Văn phòng tại TP. HCM'
       free_consultant: 'TƯ VẤN MIỄN PHÍ'
       home: 'Trang chủ'
-      service: 'Dịch vụ'
+      service: 'Lĩnh vực hành nghề'
       about_us: 'Giới thiệu'
-      news: 'Tin tức'
+      news: 'Tin tức và sự kiện'
       contact_us: 'Liên hệ'
+      documents: 'Biểu mẫu'
+      qa: 'Hỏi đáp'
