--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -34,6 +34,7 @@ vi:
         content: 'Nội dung'
         picture: 'Ảnh minh họa'
         slug: 'Đường dẫn URL'
+        priority: 'Thứ tự'
       post:
         title: 'Tiêu đề'
         category_id: 'Thư mục'
@@ -117,6 +118,7 @@ vi:
     content: 'Nội dung'
     picture: 'Ảnh minh họa'
     slug: 'Đường dẫn URL'
+    priority: 'Thứ tự'
   category:
     show:
       heading: 'Thư mục'
@@ -249,6 +251,7 @@ vi:
         content: 'Nội dung'
         picture: 'Ảnh minh họa'
         slug: 'Đường dẫn URL'
+        priority: 'Thứ tự'
       post:
         title: 'Tiêu đề'
         category_id: 'Thư mục'
