Update Form and Post association

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -308,6 +308,7 @@ vi:
         content: 'Nội dung'
         form: 'Tệp đính kèm'
         slug: 'Đường dẫn URL'
+        user_id: 'Người viết bài'
       contract_attachment:
         attachment: 'Đính kèm'
     options:
